[package]
name = "dialog-effects"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
integration-tests = []
web-integration-tests = []

[dependencies]
dialog-capability = { workspace = true }
dialog-credentials = { workspace = true }
dialog-common = { workspace = true }
async-trait = { workspace = true }
base58 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
thiserror = { workspace = true }

[lints.rust]
missing_docs = "warn"

[dev-dependencies]
dialog-common = { workspace = true, features = ["helpers"] }
serde_ipld_dagcbor = { workspace = true }
wasm-bindgen-test = { workspace = true }
