[package]
name = "dialog-encoding"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
# Enable integration tests (tests with service provisioning)
integration-tests = ["dialog-common/integration-tests"]
# Enable web integration tests
web-integration-tests = ["dialog-common/web-integration-tests"]

[dependencies]
dialog-common = { workspace = true }

anyhow = { workspace = true }
itertools = { workspace = true }
leb128 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
base58 = { workspace = true }
brotli = { workspace = true }
serde_ipld_dagcbor = { workspace = true }

[lints.rust]
# This cfg is used by the dialog_common::test proc macro for wasm inner tests
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(dialog_test_wasm_integration)"] }
