[package]
name = "dialog-macros"
description = "Procedural macros for dialog"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
blake3 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "parsing"] }

