[package]
name = "dialog-operator"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["s3", "ucan"]
helpers = ["dep:anyhow"]
integration-tests = ["dialog-common/integration-tests"]
web-integration-tests = ["dialog-common/web-integration-tests"]
s3 = ["dep:dialog-remote-s3"]
ucan = ["s3", "dep:dialog-remote-ucan-s3", "dep:dialog-ucan", "dialog-capability/ucan"]

[dependencies]
dialog-artifacts = { workspace = true }
dialog-capability = { workspace = true }
dialog-common = { workspace = true }
dialog-credentials = { workspace = true }
dialog-varsig = { workspace = true }
dialog-ucan = { workspace = true, optional = true }
dialog-remote-s3 = { workspace = true, optional = true }
dialog-remote-ucan-s3 = { workspace = true, optional = true }

anyhow = { workspace = true, optional = true }
async-trait = { workspace = true }
serde = { workspace = true }
signature = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(dialog_test_wasm_integration)"] }
