[package]
name = "dialog-prolly-tree"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
helpers = []
# Enable integration tests (tests with service provisioning)
integration-tests = ["dialog-common/integration-tests"]
# Enable web integration tests
web-integration-tests = ["dialog-common/web-integration-tests"]

[dependencies]
dialog-common = { workspace = true }
dialog-storage = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
base58 = { workspace = true }
blake3 = { workspace = true }
futures-core = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

nonempty = { workspace = true, features = ["serialize"] }
thiserror = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
dialog-storage = { workspace = true, features = ["helpers"] }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
futures-util = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
# getrandom = { workspace = true, features = ["wasm_js"] }
getrandom = { workspace = true, features = ["js"] }
wasm-bindgen-test = { workspace = true }

[lints.rust]
# This cfg is used by the dialog_common::test proc macro for wasm inner tests
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(dialog_test_wasm_integration)"] }
