[package]
name = "dialog-query-macros"
version.workspace = true
edition = "2021"
authors.workspace = true
description = "Procedural macros for Dialog Query"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }