[package]
name = "dialog-query"
version.workspace = true
edition = "2024"
authors.workspace = true
description = "Query engine for Dialog-DB"
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_ipld_dagcbor = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Collections
indexmap = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Dialog-DB dependencies
dialog-artifacts = { workspace = true }
dialog-common = { workspace = true }

# Async utilities
futures-util = { workspace = true }
futures-core = { workspace = true }
async-stream = { workspace = true }

# Macro utilities
paste = { workspace = true }
dialog-macros = { workspace = true }

# Tokio with platform-specific features
# wasm32 only supports: sync, macros, io-util, rt, time
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
wasm-bindgen-futures = { workspace = true }


[dev-dependencies]
tokio-test = { workspace = true }
dialog-storage = { workspace = true, features = ["helpers"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
futures-util = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
default = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("web-integration-tests"))'] }
