[package]
name = "dialog-query"
version.workspace = true
edition = "2024"
authors.workspace = true
description = "Query engine for Dialog-DB"
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_ipld_dagcbor = { workspace = true }

# Hashing
blake3 = { workspace = true }
base58 = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Dialog-DB dependencies
dialog-artifacts = { workspace = true }
dialog-capability = { workspace = true }
dialog-common = { workspace = true, features = ["helpers"] }
dialog-effects = { workspace = true }

# Async utilities
futures-util = { workspace = true }
futures-core = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
auto_enums = { workspace = true }
futures = { workspace = true }

# Macro utilities
dialog-macros = { workspace = true }

# Tokio with platform-specific features
# wasm32 only supports: sync, macros, io-util, rt, time
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
wasm-bindgen-futures = { workspace = true }


[dev-dependencies]
tokio-test = { workspace = true }
dialog-artifacts = { workspace = true }
dialog-operator = { workspace = true }
dialog-repository = { workspace = true, features = ["helpers"] }
dialog-storage = { workspace = true, features = ["helpers"] }
dialog-network = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
futures-util = { workspace = true }
wasm-bindgen-test = { workspace = true }

[features]
default = []
# Marker feature so benchmarks (which depend on `BenchEnv` in
# `src/helpers.rs`) are only built when explicitly requested. The helper
# itself lives behind `#[cfg(any(test, feature = "helpers"))]` and is
# pulled in by the benches via `#[path]`; it relies exclusively on
# dev-dependencies (dialog-repository depends on dialog-query, so those
# crates can only appear as a dev-dependency cycle, never a normal dep).
helpers = []

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "query_reads"
harness = false
required-features = ["helpers"]

[[bench]]
name = "query_join"
harness = false
required-features = ["helpers"]

[[bench]]
name = "query_memory"
harness = false
required-features = ["helpers"]

[[bench]]
name = "query_disk"
harness = false
required-features = ["helpers"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("web-integration-tests"))'] }
