[package]
name = "dialog-remote-s3"
description = "S3-compatible remote storage backend for dialog-db"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
helpers = [
  "dep:tempfile",
  "dep:anyhow",
  "dep:rand",
  "dep:futures-util",
  "dialog-common/helpers",
  "dep:s3s",
  "dep:hyper",
  "dep:hyper-util",
  "dep:http-body-util",
  "dep:bytes",
  "dep:tokio-test",
  "dep:tower",
  "dep:tower-http",
  "dep:tokio",
]
s3-integration-tests = ["helpers"]
integration-tests = ["helpers", "dialog-common/integration-tests"]
web-integration-tests = ["dialog-common/web-integration-tests"]

[dependencies]
async-trait = { workspace = true }
base58 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dialog-capability = { workspace = true }
dialog-common = { workspace = true }
dialog-effects = { workspace = true }
dialog-varsig = { workspace = true }
hmac = { workspace = true }
md5 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

rand = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "fs", "macros", "rt", "net"], optional = true }
s3s = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, features = ["server", "tokio", "service"], optional = true }
http-body-util = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
tokio-test = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["cors"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
anyhow = { workspace = true }
dialog-common = { workspace = true, features = ["helpers"] }
ipld-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
wasm-bindgen-test = { workspace = true }


[[test]]
name = "s3"
path = "tests/s3/main.rs"
required-features = ["s3-integration-tests"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(feature, values(\"s3-integration-tests\", \"web-integration-tests\", \"helpers\"))",
  "cfg(dialog_test_wasm_integration)",
] }
