[package]
name = "dialog-remote"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["cloudflare"]
cloudflare = [
    "dep:axum",
    "dep:console_error_panic_hook",
    "dep:http",
    "dep:tower-http",
    "dep:tower-service",
    "dep:worker",
    "dep:worker-macros",
]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
url = { workspace = true }

axum = { workspace = true, features = ["macros"], optional = true }
console_error_panic_hook = { workspace = true, optional = true }
http = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["cors"], optional = true }
tower-service = { workspace = true, optional = true }
worker = { workspace = true, optional = true }
worker-macros = { workspace = true, optional = true }

[dev-dependencies]
dialog-storage = { workspace = true }
dialog-artifacts = { workspace = true }
dialog-prolly-tree = { workspace = true }

base58 = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt", "fs"] }
