[package]
name = "dialog-remote"
description = "Remote synchronization protocol for dialog-db"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dialog-common = { workspace = true }
dialog-artifacts = { path = "../dialog-artifacts" }
dialog-storage = { path = "../dialog-storage" }

async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = "0.4"
md5 = "0.8.0"

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt", "net"] }
axum = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
futures-util = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
