[package]
name = "dialog-repository"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable integration tests (tests with service provisioning)
integration-tests = ["dialog-common/integration-tests"]
# Enable web integration tests
web-integration-tests = ["dialog-common/web-integration-tests"]

[dependencies]
dialog-capability = { workspace = true }
dialog-common = { workspace = true }
dialog-operator = { workspace = true }
dialog-credentials = { workspace = true }
dialog-effects = { workspace = true }
dialog-storage = { workspace = true }
dialog-prolly-tree = { workspace = true }
dialog-varsig = { workspace = true }
parking_lot = { workspace = true }

async-trait = { workspace = true }
base58 = { workspace = true }
serde = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
dialog-storage = { workspace = true, features = ["helpers"] }
dialog-common = { workspace = true, features = ["helpers"] }
anyhow = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "macros", "io-util", "fs"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "io-std",
    "sync",
    "macros",
    "rt",
    "rt-multi-thread",
] }

[lints.rust]
# This cfg is used by the dialog_common::test proc macro for wasm inner tests
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(dialog_test_wasm_integration)"] }
